changed img squish issue by making object-fit:cover

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,10 +234,10 @@ td{
 
 #friends-img{
     width: 100%;
-    height: 235px;
+    height: 350px;
+    object-fit: cover;
     border: 2px solid rgb(89,109,121);
     border-radius: 10px;
-    
 }
 
 h3{
@@ -265,6 +265,7 @@ h3{
 #profile-img{
     width: 200px;
     height: 180px;
+    object-fit: cover;
     margin-left: 10px;
     border-radius: 10px;
     margin: 10px;
@@ -382,5 +383,17 @@ h3{
 
     .form-label{
         margin: 0 auto;
+    }
+
+    #friends-img{
+        width: 100%;
+        height: 450px;
+        object-fit: cover;
+        border: 2px solid rgb(89,109,121);
+        border-radius: 10px;
+    }
+
+    .card-content{
+        color: black;
     }
 }
